flask/k8s/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask
  name: flask
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flask
    spec:
      containers:
      - image: 608420491255.dkr.ecr.us-east-1.amazonaws.com/flask:v1
        imagePullPolicy: IfNotPresent
        name: flask
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
