flask/k8s/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask
  name: svc-flask
  namespace: default
spec:
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask
  sessionAffinity: None
  type: ClusterIP
