flask/k8s/flask-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: nginx-flask
spec:
  ingressClassName: nginx
  rules:
    - host: flask.mayrink.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-flask
              port:
                number: 80
